--- a/css/style-main.css
+++ b/css/style-main.css
@@ -302,7 +302,7 @@ body._lock {
 }
 
 .info-header__item_phone .info-header__text::after {
-  content: '';
+  content: "";
   position: absolute;
   left: 50%;
   bottom: -3px;
@@ -475,7 +475,7 @@ body._lock {
 }
 
 .btn::after {
-  content: '';
+  content: "";
   position: absolute;
   z-index: 1;
   top: 0;
@@ -496,9 +496,9 @@ body._lock {
   opacity: 1;
 }
 
-input[type="text"],
-input[type="email"],
-input[type="tel"],
+input[type=text],
+input[type=email],
+input[type=tel],
 textarea {
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -604,7 +604,7 @@ textarea {
 }
 
 .popup__body::after {
-  content: '';
+  content: "";
   position: absolute;
   width: 97%;
   height: 10px;
@@ -632,7 +632,7 @@ textarea {
 
 .popup__close::after,
 .popup__close::before {
-  content: '';
+  content: "";
   position: absolute;
   top: calc(50% - 1px);
   width: 100%;
@@ -711,7 +711,7 @@ textarea {
 }
 
 .popup__link::after {
-  content: '';
+  content: "";
   position: absolute;
   left: 50%;
   bottom: 8px;
@@ -816,7 +816,7 @@ textarea {
 }
 
 .form-popup__block a::after {
-  content: '';
+  content: "";
   position: absolute;
   left: 50%;
   bottom: 8px;
@@ -875,7 +875,7 @@ textarea.form-popup__input {
 }
 
 .title-section::after {
-  content: '';
+  content: "";
   width: 100px;
   height: 4px;
   background-color: #009de5;
@@ -943,7 +943,7 @@ textarea.form-popup__input {
 }
 
 .main__button span::after {
-  content: '';
+  content: "";
   position: absolute;
   width: 27px;
   height: 27px;
@@ -971,7 +971,7 @@ textarea.form-popup__input {
 }
 
 .main__phone a::before {
-  content: '';
+  content: "";
   position: absolute;
   z-index: 2;
   left: 5px;
@@ -984,7 +984,7 @@ textarea.form-popup__input {
 }
 
 .main__phone a::after {
-  content: '';
+  content: "";
   position: absolute;
   z-index: 1;
   left: 0;
@@ -1046,7 +1046,7 @@ textarea.form-popup__input {
 }
 
 .page-form__body::after {
-  content: '';
+  content: "";
   position: absolute;
   bottom: -10px;
   left: 1.5%;
@@ -1060,7 +1060,7 @@ textarea.form-popup__input {
 }
 
 .page-form__body::before {
-  content: '24/7';
+  content: "24/7";
   position: absolute;
   z-index: 5;
   top: 0;
@@ -1310,7 +1310,7 @@ textarea.form-popup__input {
 }
 
 .item-services__list::before {
-  content: '';
+  content: "";
   position: absolute;
   left: 0;
   top: 0;
@@ -1329,7 +1329,7 @@ textarea.form-popup__input {
 }
 
 .item-services__list li::before {
-  content: '';
+  content: "";
   position: absolute;
   left: 0;
   top: 18px;
@@ -1415,7 +1415,7 @@ textarea.form-popup__input {
 }
 
 .caption__button span::before {
-  content: '';
+  content: "";
   position: absolute;
   width: 16px;
   height: 17px;
@@ -1448,7 +1448,7 @@ textarea.form-popup__input {
 }
 
 .licence::after {
-  content: '';
+  content: "";
   position: absolute;
   bottom: 0;
   left: 0;
@@ -1485,7 +1485,7 @@ textarea.form-popup__input {
 }
 
 .licence__text::before {
-  content: '';
+  content: "";
   position: absolute;
   top: 10px;
   left: 0;
@@ -1531,7 +1531,7 @@ textarea.form-popup__input {
 }
 
 .item-articles::after {
-  content: '';
+  content: "";
   position: absolute;
   z-index: 1;
   top: 0;
@@ -1757,7 +1757,7 @@ textarea.form-popup__input {
 
   .header__content::after {
     display: inline-block;
-    content: '';
+    content: "";
     position: absolute;
     z-index: 1;
     top: 0;
@@ -1870,7 +1870,7 @@ textarea.form-popup__input {
   }
 
   .menu-header__link::after {
-    content: '';
+    content: "";
     position: absolute;
     width: 1px;
     height: 26px;
